ajout event handling, @for, form part1, @input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,14 @@
 <!-- IMPORT COMPOSANT ENFANT-->
 <app-child-component />
 
-<!-- IMPORT pour exemple @for -->
+<!-- Directive@for -->
 <app-directive-for />
+
+<!-- Event handling -->
+<app-event-handling />
+
+<!-- @Input-->
+<app-user [users]="users" />
+
+<!-- Formulaire -->
+<app-form />
