--- a/src/component/directive-ouptup/directive-ouptup.component.html
+++ b/src/component/directive-ouptup/directive-ouptup.component.html
@@ -1,3 +1,5 @@
 <section>
-  <input type="checkbox" (input)="handleInputChange($event)" name="checkBoxValue">
+  <input type="checkbox" (input)="handleCheckboxChange($event)" name="checkBoxValue">
+  <br>
+  <input type="text" (input)="handleInputTextChange($event)">
 </section>
